--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "handlebars-dateformat": "^1.1.3",
     "hbs": "^4.2.0",
